Add styled frontend

--- a/gpt-frontend/index.html
+++ b/gpt-frontend/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Yew App</title>
+        <title>General Predicate Testing</title>
+        <link data-trunk rel="scss" href="styles/index.scss">
     </head>
 </html>
